fix detail